change height of nav drawer to prevent scroll issue on mobile

--- a/main.css
+++ b/main.css
@@ -314,8 +314,8 @@ u {
     z-index: 12;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: #2c2c2c;
     visibility: hidden;
     -webkit-transition: visibility 0s 0.7s;
